<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name" translatable="false">Popular Movies</string>
    <string name="__leak_canary_display_activity_label" translatable="false">Popular Movies Leaks
    </string>
    <string name="content_authority" translatable="false">ch.anoop.udacity.popularmovies.provider
    </string>
    <string name="title_browse_movies">Popular Movies</string>
    <string name="title_movie_details">Movie Information</string>
    <string name="view_empty_message">Nothing Found</string>
    <string name="view_error_message">Content not available offline.</string>
    <string name="mode_favored">My Favorites</string>
    <string name="mode_sort">Sort By</string>
    <string name="mode_sort_popularity">Most Popular</string>
    <string name="mode_sort_vote_average">Highest Rated</string>
    <string name="mode_sort_vote_count">Most Rated</string>
    <string name="movie_image_desc">Movie Image</string>
    <string name="movie_poster_desc">Movie Poster</string>
    <string name="menu_sort_favorites">Favored</string>
    <string name="favored_empty_message">No Favorite movies yet.</string>
    <string name="favored_error_message">Sorry. Failed to Load.\n Try Again</string>
    <string name="movie_details_rating">Average rating: %1$s</string>
    <string name="menu_refresh">Reload</string>
    <string name="menu_scroll_to_top">Scroll To Top</string>
    <string name="menu_about">About</string>
    <string name="movie_item_btn_favorite_desc">Save to favorites</string>
    <string name="title_settings">Settings</string>
    <string name="pref_include_adult_title">Include Adult Rated Movies</string>
    <string name="pref_include_adult_description">Check this option to include Adult Rated Movies in
        App
    </string>
    <string name="menu_settings">Settings</string>
    <string name="movie_details_trailer_desc">Play the trailer</string>
    <string name="movie_reviews">Reviews</string>
    <string name="message_empty_movie_fragment">Select Movie</string>
    <string name="movie_videos">Trailers</string>
    <string name="play_trailer_desc">Play trailer</string>
    <string name="menu_share">Share</string>
    <string name="share_template">Check out \'<xliff:g id="title">%1$s</xliff:g>\' at
        <xliff:g id="url">%2$s</xliff:g>
    </string>
    <string name="title_share_trailer">Share trailer</string>
    <string name="message_movie_favored">Added to favorites.</string>
    <string name="sync_account_type">popularmovies.udacity.anoop.ch</string>
</resources>
