<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_action_filter"
        android:title="@string/mode_sort"
        android:visible="false"
        app:showAsAction="always">

        <menu>
            <group
                android:id="@+id/menu_sort_group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_sort_popularity"
                    android:title="@string/mode_sort_popularity"/>

                <item
                    android:id="@+id/menu_sort_vote_count"
                    android:title="@string/mode_sort_vote_count"/>

                <item
                    android:id="@+id/menu_sort_vote_average"
                    android:title="@string/mode_sort_vote_average"/>

                <item
                    android:id="@+id/menu_sort_favorites"
                    android:title="@string/menu_sort_favorites"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_scroll_to_top"
        android:icon="@drawable/ic_action_up"
        android:title="@string/menu_scroll_to_top"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/menu_refresh"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom"/>

</menu>